# router

./: .gitignore
grand-router-ai/: .env.example  .gitignore  (+1 more)
grand-router-ai/backend/: README.md  pyproject.toml
grand-router-ai/backend/scripts/: demo_codegen.py  demo_verify_steps.py  print_agents.py
grand-router-ai/backend/src/grand_router_api/: __init__.py  logging_config.py  main.py
grand-router-ai/backend/src/grand_router_api/api/v1/: agents.py  chats.py  router.py
grand-router-ai/backend/src/grand_router_api/services/agents/: __init__.py  base.py  registry.py  registry_models.py  runner.py  stub_runner.py
grand-router-ai/backend/src/grand_router_api/services/agents/chatwriter/: agent.py
grand-router-ai/backend/src/grand_router_api/services/agents/codechat/: agent.py
grand-router-ai/backend/src/grand_router_api/services/agents/codegen/: __init__.py  agent.py
grand-router-ai/backend/src/grand_router_api/services/llm/: client.py
grand-router-ai/backend/src/grand_router_api/services/persistence/: __init__.py  file_store.py  interface.py
grand-router-ai/backend/src/grand_router_api/services/routing/: __init__.py  guardrails.py  hybrid_router.py  llm_router.py  prompt.md  qna_intent.py  router_service.py
grand-router-ai/backend/src/grand_router_api/services/settings/: env.py
grand-router-ai/backend/tests/: test_router_execute_continuation.py
grand-router-ai/shared/: pyproject.toml  smoke_test_contracts.py
grand-router-ai/shared/src/grand_router_contracts/: __init__.py  agent.py  api_version.py  artifacts.py  chat.py  router.py  schema_export.py
(+75 files in other folders)
