[project]
name = "grand-router-contracts"
version = "0.1.0"
description = "Shared JSON contracts (pydantic models) for Grand Router AI"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grand_router_contracts"]
